--- a/citizen-service/citizen-service/src/main/resources/application.yml
+++ b/citizen-service/citizen-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/
+    url: jdbc:mysql://localhost:3306/citizendb
     password: mysql
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
